Temporary fix for <pre> overflow

--- a/site/style.scss
+++ b/site/style.scss
@@ -100,3 +100,5 @@ $dark: #1c2226;
           animation: pulsate 4s linear infinite;
 }
 
+// Temporary hack
+pre { overflow: auto; }
